<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PathCollector!</string>
    <string name="app_name">Traffic Collector</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="meters">meters</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="length">Length</string>
    <string name="speed">Speed</string>
    <string name="max_speed">Max speed</string>
    <string name="avg_speed">Average Speed</string>
    <string name="real_time">Real-time</string>
    <string name="upload_data">Upload Data</string>
    <string name="name">Name</string>
    <string name="account_information">Account Information</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="settings_change_password">Change Password?</string>
    <string name="update_information">Update Information</string>
    <string name="settings_update">Update</string>
    <string name="account_your_username">Your Username</string>
    <string name="account_password"> Password:</string>
    <string name="account_password_check"> Password Check:</string>
    <string name="account_save">Save</string>
    <string name="account_cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="textview">Stop</string>
    <string name="share_position">Share Position</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="regenerate_id">Regenerate ID</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_map">Map</string>

</resources>