<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="240sp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bstart"
            style="@style/startButton"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/start" >
        </Button>

        <Button
            android:id="@+id/bpause"
            style="@style/pauseButton"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/stop" >
        </Button>
    </LinearLayout>

    <CheckedTextView
        android:id="@+id/real_time"
        android:layout_width="200dp"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="10dip"
        android:text="@string/real_time"
        android:textSize="15sp" >
    </CheckedTextView>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="100dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bupload"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_data" >
        </Button>
    </ScrollView>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="240dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bshare"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/share_position" >
        </Button>

        <Button
            android:id="@+id/bstopshare"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_sharing" >
        </Button>
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView2"
        android:layout_width="120dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bregenerate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/regenerate_id" >
        </Button>
    </ScrollView>

    <WebView
        android:id="@+id/where"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>