<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen" >

    <PreferenceCategory android:title="@string/account_information" >

        <EditTextPreference
            android:id="@+id/settings_name"
            android:defaultValue=""
            android:dialogMessage="Name"
            android:dialogTitle="Name"
            android:enabled="true"
            android:key="settings_name"
            android:title="@string/name" />

        <EditTextPreference
            android:id="@+id/settings_username"
            android:defaultValue=""
            android:dialogMessage="Username"
            android:dialogTitle="Username"
            android:enabled="true"
            android:key="settings_username"
            android:title="@string/username" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/password" >

        <CheckBoxPreference
            android:id="@+id/settings_change"
            android:defaultValue="false"
            android:key="settings_change"
            android:summary="Do you want to change Password?"
            android:title="@string/settings_change_password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/update_information" >

        <CheckBoxPreference
            android:id="@+id/settings_update_server"
            android:defaultValue="false"
            android:key="settings_update_server"
            android:summary="Send account information to server?"
            android:title="@string/settings_update" />
    </PreferenceCategory>

</PreferenceScreen>

<!--
            <EditTextPreference  
					android:id="@+id/settings_password"
					android:dialogTitle="Password"
					android:dialogMessage="Password"
					android:key="settings_password"
					android:title="Password"
					android:defaultValue=""
					android:enabled="true"
					/>
					
			<EditTextPreference  
					android:id="@+id/settings_password_re"
					android:dialogTitle="Re-type Password"
					android:dialogMessage="Re-type Password"
					android:key="settings_password_re"
					android:title="Re-type Password"
					android:defaultValue=""					
					android:enabled="true">

-->


<!--
        <EditTextPreference  
				android:id="@+id/settings_facebook"
				android:dialogTitle="Facebook"
				android:dialogMessage="Facebook"
				android:key="settings_facebook"
				android:title="Facebook"
				android:defaultValue=""
				android:enabled="true"/>
				
		<EditTextPreference  
				android:id="@+id/settings_twitter"
				android:dialogTitle="Twitter"
				android:dialogMessage="Twitter"
				android:key="settings_twitter"
				android:title="Twitter"
				android:defaultValue=""
				android:enabled="true"/>
-->
