<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/account_your_username"
            android:textSize="10pt" >
        </EditText>

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_password"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:textSize="10pt" >
        </EditText>

        <TextView
            android:id="@+id/username_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_password_check"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:textSize="10pt" >
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="200dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/account_save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/account_save" >
            </Button>

            <Button
                android:id="@+id/account_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/account_cancel" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>