<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/screen_background"
    android:orientation="vertical"
    android:padding="@dimen/margin" >

    <ro.pub.acs.traffic.utils.Gauge
        android:id="@+id/gauge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/row_1"
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/row_spacing" >

        <LinearLayout
            android:id="@+id/box_speed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="@dimen/margin" >

            <TextView
                android:id="@+id/txt_speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding"
                android:text="@string/speed"
                android:textSize="@dimen/header" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text=""
                android:textSize="@dimen/value" />

            <TextView
                android:id="@+id/speed_units"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding"
                android:text="@string/kilometers_per_hour"
                android:textSize="@dimen/units" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box_max_speed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/length_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding"
                android:text="@string/max_speed"
                android:textSize="@dimen/header" />

            <TextView
                android:id="@+id/max_speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text=""
                android:textSize="@dimen/value" />

            <TextView
                android:id="@+id/max_speed_units"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding"
                android:text="@string/kilometers_per_hour"
                android:textSize="@dimen/units" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/row_spacing" >

        <LinearLayout
            android:id="@+id/box_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_max_speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding"
                android:text="@string/length"
                android:textSize="@dimen/header" />

            <TextView
                android:id="@+id/length"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text=""
                android:textSize="@dimen/value" />

            <TextView
                android:id="@+id/length_units"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/display_background"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding"
                android:text="@string/kilometers"
                android:textSize="@dimen/units" />
        </LinearLayout>
    </LinearLayout>
    <!--
    <TextView
		android:id="@+id/speed"
	    android:layout_width="250px"
	    android:layout_height="40px"
	    android:textColor="#FFFFFF"
	    android:typeface="monospace" 
	    android:textSize="18px"  />
	<TextView
		android:id="@+id/max_speed"
	    android:layout_width="250px"
	    android:layout_height="40px"
	    android:textColor="#FFFFFF"
	    android:typeface="monospace" 
	    android:textSize="18px"  />
	<TextView
		android:id="@+id/length"
	    android:layout_width="250px"
	    android:layout_height="40px"
	    android:textColor="#FFFFFF"
	    android:typeface="monospace" 
	    android:textSize="18px"  />
    -->

</LinearLayout>